tests/NormalTests/paczka2/big_fuzzy/97150498.err
Error in line 1: 7NK A404 63,9
Error in line 3: HdLRxq A769 55,8
Error in line 13: y6Xq6w A368 40,6
Error in line 14: HdLRxq A368 49,7
Error in line 17: HdLRxq A769 29,7
Error in line 21: HdLRxq S446 57,3
Error in line 23: HdLRxq A404 93,0
Error in line 20: 7NK A368 51,0
Error in line 47: S446 A368 22,4
Error in line 51: 7Ea A368 0,8
Error in line 56: 7NK S446 53,4
Error in line 66: HdLRxq A404 10,99
Error in line 54: eEV A368 320,5
Error in line 60: 7NK A368 17,6
Error in line 75: 7Ea A368 85,2
Error in line 78: n8N A404 28,8
Error in line 86: eEV A368 75,9
Error in line 82: HdLRxq A404 2,1
Error in line 98: eEV S446 162,5
Error in line 105: 7Ea S446 20,9
Error in line 122: 7NK S446 25,5
Error in line 130: 7NK A368 413,57
Error in line 114: y6Xq6w A769 72,2
Error in line 135: y6Xq6w S446 27,6
Error in line 137: S446 S446 0,0
Error in line 126: n8N S446 70,6
Error in line 143: S446 A404 240,56
Error in line 128: 7NK A368 93,6
Error in line 142: n8N A769 69,9
Error in line 152: y6Xq6w A368 98,4
Error in line 159: 7NK A769 23,6
Error in line 179: n8N A368 26,4
Error in line 156: S446 A404 153,4
Error in line 195: y6Xq6w S446 47,4
Error in line 201: y6Xq6w A769 82,9
Error in line 204: HdLRxq A769 36,1
Error in line 206: y6Xq6w A368 06,5
Error in line 211: n8N A769 0,9
Error in line 213: 7NK A368 97,5
Error in line 217: 7NK A769 90,7
Error in line 234: 7NK A368 176,41
